# changedetection.io

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .ruff.toml  ATTRIBUTION.md  COMMERCIAL_LICENCE.md  CONTRIBUTING.md  COOLIFY.md  DESIGN.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  Procfile  README-debugging.md  README-pip.md  README.md  app.json  babel.cfg  backend.py  build-deb.sh  changedetection.py  docker-compose-development.yml  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.override.test.yml  docker-compose.test-playwright.yml  docker-compose.yml  docker-entrypoint.sh  f  f.list  heroku.yml  justfile  memory-leak.html  p  package-lock.json  price-finder  pyproject.toml  (+13 more)
.github/: FUNDING.yml  dependabot.yml  nginx-reverse-proxy-test.conf
backend/: README-pytest.md  __init__.py  backend.py  content_fetcher.py  fetch_site_status.py  forms.py  html_tools.py  nocache.py  notification.py  pytest.ini  requirements.txt  run_all_tests.sh  store.py  test_backend.py  update_worker.py
changedetection.io.egg-info/: entry_points.txt
changedetectionio/: .gitignore  PLUGIN_README.md  __init__.py  __main__.py  api_v1.py  app.py  apprise_asset.py  async_update_worker.py  auth_decorator.py  babel.cfg  browser_steps.py  changedetection.py  conditions.py  content_fetcher.py  custom_queue.py  diff.py  digest.py  f  f.html  favicon_utils.py  fetch_site_status.py  filters.py  flask_app.py  forms.py  gc_cleanup.py  html_tools.py  image_diff.py  importer.py  is_safe_url.py  jinja_extensions.py  languages.py  messages.pot  notification.py  notification_service.py  pluggy_interface.py  poop.txt  proxy_rotator.py  pytest.ini  queue_handlers.py  queuedWatchMetaData.py  (+18 more)
datastore/: README.md  url-watches.json
debian/: changedetection-wrapper  changedetection.io.service  changelog  control  debhelper-build-stamp  install  postinst  postrm  prerm  rules
docker-configs/: nginx.conf
docs/: README.md  api-spec.yaml  apidoc.json  extra-playwright-servers.md  package.json
helm-chart/: Chart.yaml  README.md  values.yaml
plans/: feat-watch-words-event-metadata-configuration.md
playwright/: Dockerfile  seccomp_profile.json  server.js
services/: README.md
services/core/: .env.example  README.md  alembic.ini  pyproject.toml
services/core/app/: __init__.py  config.py  db.py  main.py
services/core/app/middleware/: security_headers.py  tenant_resolver.py
services/core/app/models/: __init__.py  base.py  watch.py  watch_history_entry.py  watch_tag.py  watch_tag_link.py
services/core/app/object_store/: __init__.py  factory.py  local.py  protocol.py  s3.py
services/core/app/routes/: health.py  history.py  tags.py  watches.py
services/core/app/schemas/: __init__.py  history.py  tags.py  watches.py
services/core/app/security/: __init__.py  deps.py  identity_reads.py  tokens.py
services/core/app/store/: __init__.py  pg.py  protocol.py
services/core/migrations/: env.py
services/core/migrations/versions/: 20260413_0001_watches_tags.py  20260413_0002_watch_history_index.py
services/core/tests/: conftest.py  test_history_crud.py  test_history_routes.py  test_object_store_local.py  test_tags_crud.py  test_tags_routes.py  test_watches_crud.py  test_watches_routes.py
services/identity/: .env.example  README.md  alembic.ini  pyproject.toml
services/identity/app/: __init__.py  config.py  db.py  main.py  redis_client.py
services/identity/app/email/: __init__.py  renderer.py  sender.py
services/identity/app/email/templates/: invite.html  invite.txt  password-reset.html  password-reset.txt  verify-email.html  verify-email.txt
services/identity/app/middleware/: security_headers.py  tenant_resolver.py
services/identity/app/models/: __init__.py  api_key.py  audit_log.py  base.py  email_verification_token.py  invite.py  membership.py  oauth_account.py  org.py  password_reset_token.py  session.py  user.py
services/identity/app/oauth/: __init__.py  bootstrap.py  github.py  google.py  provider.py  state.py
services/identity/app/routes/: api_keys.py  auth.py  health.py  invite_accept.py  invites.py  me.py  oauth.py  password_reset.py  verify_email.py
services/identity/app/schemas/: __init__.py  api_keys.py  auth.py  invites.py
services/identity/app/security/: deps.py  passwords.py  rate_limit.py  rate_limit_dep.py  tokens.py
services/identity/app/services/: __init__.py  api_keys.py  audit.py  email_verification.py  errors.py  invites.py  oauth.py  orgs.py  password_reset.py  sessions.py  slugs.py  users.py
services/identity/migrations/: env.py  script.py.mako
services/identity/migrations/sql/: dev-init.sql
services/identity/migrations/versions/: 20260413_0001_initial_schema.py  20260413_0002_email_verification_tokens.py
services/identity/tests/: conftest.py  test_api_keys_flow.py  test_auth_flow.py  test_health.py  test_invites_flow.py  test_oauth_flow.py  test_password_reset_flow.py  test_passwords.py  test_rate_limit.py  test_slugs.py  test_tenant_resolver.py  test_tokens.py  test_verify_email_flow.py
tasks/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  FLY_SECRETS_SETUP.md  NEON_DATABASE_SETUP.md  SITE_SPECIFIC_ISSUES.md  __init__.py  auth.py  auth_api.py  availability_detector.py  event_extractor.py  fly.toml  gunicorn_conf.py  models.py  notification.py  notification_router.py  pg_store.py  postgresql_store.py  prd-product-requirements-document-ticketwatch.md  prd.json  price_change_alert.py  price_extractor.py  price_history_cleanup.py  proxy_rotator.py  requirements.txt  restock_alert.py  schema_v2.py  schema_v2.sql  sold_out_alert.py  test_auth.py  test_availability_detector.py  test_availability_history.py  test_browser_extension.py  test_etix_integration.py  test_event_extractor.py  test_models.py  (+15 more)
(+867 files in other folders)
